# embryo-image-processing

./: .gitignore  README.md  embryo_labeler.py  main.py  pyclm_classifier.py  pyproject.toml  train_hmm.sh
PyCLM/: caps30.toml  control.toml  pyclm_classifier.py  pyclm_config.toml  schedule.toml
binned_tifs/inner.i04channel_638_patterns/post-nc10/: inner.i04channel_638_patterns_frame_011.tif  inner.i04channel_638_patterns_frame_012.tif  inner.i04channel_638_patterns_frame_013.tif  inner.i04channel_638_patterns_frame_014.tif  inner.i04channel_638_patterns_frame_015.tif  inner.i04channel_638_patterns_frame_016.tif  inner.i04channel_638_patterns_frame_017.tif  inner.i04channel_638_patterns_frame_018.tif  inner.i04channel_638_patterns_frame_019.tif  inner.i04channel_638_patterns_frame_020.tif  inner.i04channel_638_patterns_frame_021.tif  inner.i04channel_638_patterns_frame_022.tif  inner.i04channel_638_patterns_frame_023.tif  inner.i04channel_638_patterns_frame_024.tif  inner.i04channel_638_patterns_frame_025.tif  inner.i04channel_638_patterns_frame_026.tif  inner.i04channel_638_patterns_frame_027.tif  inner.i04channel_638_patterns_frame_028.tif  inner.i04channel_638_patterns_frame_029.tif  inner.i04channel_638_patterns_frame_030.tif  (+27 more)
models/: model_info.json
models/hybrid_hmm/: hybrid_hmm_model_info.json
src/: nc_classification.py
src/augmentation/: elastic_deformation.py  embryo_augmentation.py
src/classification/: base_hmm_predictor.py  base_hmm_trainer.py  classification_diagnostic.py  cnn_classifier.py  embryo_video.py  lstm_classifier.py  nc10_classification.py  train_separated_classifiers.py
src/processing/: cellpose_segmentation.py  convert_nd2.py  extract_embryo.py  histogram_equalization.py
(+737 files in other folders)
