[project]
name = "embryo-image-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "opencv-python>=4.13.0.92",
    "scikit-learn>=1.3.0",
    "tifffile>=2023.1.1",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
